WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
167469
Fix CPU / Memory diagnostic logging in PerformanceMonitor
https://bugs.webkit.org/show_bug.cgi?id=167469
Summary
Fix CPU / Memory diagnostic logging in PerformanceMonitor
Chris Dumez
Reported
2017-01-26 15:14:42 PST
Fix CPU / Memory diagnostic logging in PerformanceMonitor to use logDiagnosticMessage() instead of logDiagnosticMessageWithValue(). logDiagnosticMessageWithValue() should only be used with numeric values.
Attachments
Patch
(10.01 KB, patch)
2017-01-26 15:18 PST
,
Chris Dumez
achristensen
: review+
cdumez
: commit-queue+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2017-01-26 15:18:21 PST
Created
attachment 299863
[details]
Patch
Chris Dumez
Comment 2
2017-01-26 15:20:30 PST
<
rdar://problem/30220959
>
Alex Christensen
Comment 3
2017-01-26 15:21:23 PST
Comment on
attachment 299863
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=299863&action=review
> Source/WebCore/page/DiagnosticLoggingClient.h:42 > + // FIXME: rename this to logDiagnosticMessageWithNumericValue().
Should its parameter be a String, then?
Chris Dumez
Comment 4
2017-01-26 15:24:11 PST
(In reply to
comment #3
)
> Comment on
attachment 299863
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=299863&action=review
> > > Source/WebCore/page/DiagnosticLoggingClient.h:42 > > + // FIXME: rename this to logDiagnosticMessageWithNumericValue(). > > Should its parameter be a String, then?
We end up passing a string to the underlying framework so this is not a big issue (although it may be clearer indeed). However, the string definitely needs to contain a numeric value.
Chris Dumez
Comment 5
2017-01-26 15:34:35 PST
Committed
r211233
: <
http://trac.webkit.org/changeset/211233
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug